fixed the nav section menu items and worked on the overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import "fonts.css";
 
+
+
 body {
   --white-background: #fff;
   --light-background: #f2f2f2;
@@ -11,6 +13,7 @@ body {
   --dark-area: #595959;
   --darker-area: #1a1a1a;
   --darkest-area: #000;
+
 }
 
 a {
@@ -47,17 +50,21 @@ a {
   height: 100px;
 }
 
-.button {
+.menu a {
   font-family: 'Mija', sans-serif;
   font-size: 2em;
   color: #fff;
+  display: flex;
+  justify-content: space-between;
   font-weight: 700;
   margin: auto;
   padding: 5px 10px 5px 10px;
   border-radius: 11px;
+  text-decoration: none;
+
 }
 
-.button:hover {
+.menu a:hover {
   background-color: var(--dark-area);
   font-family: 'Mija', sans-serif;
   font-size: 2em;
@@ -68,7 +75,8 @@ a {
   border-radius: 11px;
 }
 
-.button:last-child {
+
+.menu a:last-child {
   background-color: var(--darker-area);
 }
 
